<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">


    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/btn_bg"
        android:shadowColor="@color/white"
        android:text="Register"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@drawable/btn_bg"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/input_passConfrm"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/input_passConfrm"
        app:layout_constraintTop_toBottomOf="@+id/input_passConfrm"
        app:rippleColor="@color/white"
        app:strokeColor="@color/white" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_email"
        android:ems="10"
        android:hint="Email"
        android:inputType="text"
        android:paddingLeft="9dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_register" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_person"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        android:paddingLeft="9dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/input_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_email"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <EditText
        android:id="@+id/input_pass"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_pass"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="9dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/input_username"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/input_username"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <EditText
        android:id="@+id/input_passConfrm"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_pass"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingLeft="9dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/input_pass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_pass"
        app:layout_constraintTop_toBottomOf="@+id/input_pass" />

    <TextView
        android:id="@+id/logo_register"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="34dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <CheckBox
        android:id="@+id/checkBoxTrainer"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg"
        android:backgroundTintMode="add"
        android:drawingCacheQuality="auto"
        android:ellipsize="none"
        android:text="im a trainer"
        android:textSize="20sp"
        app:checkedState="unchecked"
        app:layout_constraintEnd_toEndOf="@+id/input_passConfrm"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/input_passConfrm"
        app:layout_constraintTop_toBottomOf="@+id/input_passConfrm" />


</androidx.constraintlayout.widget.ConstraintLayout>